assembly polish